<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferencias_principal" >
    <PreferenceCategory
        android:key="pref_batFre"
        android:title="@string/title_bateria_frecuencia">
        <ListPreference
            android:key="bateria"
            android:title="@string/title_bateria"
            android:summary="@string/summary_bateria"
            android:entries="@array/nivel_bateria"
            android:entryValues="@array/nivel_bateria_values"
            android:defaultValue="1"/>
        <ListPreference
            android:key="frecuencia"
            android:title="@string/title_frecuencia"
            android:summary="@string/summary_frecuencia"
            android:entries="@array/frecuencia_fotos"
            android:entryValues="@array/frecuencia_fotos_values"
            android:defaultValue="1"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_memCal"
        android:title="@string/title_memoria_calidad">
        <ListPreference
            android:key="memoria"
            android:title="@string/title_memoria"
            android:summary="@string/summary_memoria"
            android:entries="@array/memoria"
            android:entryValues="@array/memoria_values"
            android:defaultValue="1"/>
        <ListPreference
            android:key="calidad"
            android:title="@string/title_calidad"
            android:summary="@string/summary_calidad"
            android:entries="@array/calidad_foto"
            android:entryValues="@array/calidad_fotos_values"
            android:defaultValue="1"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_totalFotos"
        android:title="@string/title_total_fotos">
        <ListPreference
            android:key="num_fotos"
            android:title="@string/title_num_fotos"
            android:summary="@string/summary_num_fotos"
            android:entries="@array/num_fotos"
            android:entryValues="@array/num_fotos_values"
            android:defaultValue="800"/>
    </PreferenceCategory>
</PreferenceScreen>