<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Keval Patel.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.MainActivity">

    <Button
        android:id="@+id/btn_using_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_button_service" />

    <TextView
        android:id="@+id/text_view_title_preferencias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_using_service"
        android:layout_marginTop="50dp"
        android:text="@string/title_preferencias"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <TextView
        android:id="@+id/text_view_bat_frec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_title_preferencias"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/title_bateria_frecuencia"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent" />


    <TextView
        android:id="@+id/text_view_bateria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_bat_frec"
        android:layout_marginLeft="@dimen/margin_left"
        android:text="@string/title_bateria" />

    <TextView
        android:id="@+id/text_view_frecuencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_bateria"
        android:layout_marginLeft="@dimen/margin_left"
        android:text="@string/title_frecuencia" />


    <TextView
        android:id="@+id/text_view_mem_cal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_frecuencia"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/title_memoria_calidad"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent" />


    <TextView
        android:id="@+id/text_view_memoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_mem_cal"
        android:layout_marginLeft="@dimen/margin_left"
        android:text="@string/title_memoria" />

    <TextView
        android:id="@+id/text_view_calidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_memoria"
        android:layout_marginLeft="@dimen/margin_left"
        android:text="@string/title_calidad" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_calidad"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:textSize="20dp"
        android:id="@+id/estado_servicio" />


</RelativeLayout>
